@@ -21,8 +21,8 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 
 #define BUFSIZE 8192
 #define STAT_UNKNOWN -1
-#define STAT_MAJOR_VERSION 2
-#define STAT_MINOR_VERSION 2
+#define STAT_MAJOR_VERSION 3
+#define STAT_MINOR_VERSION 0
 #define STAT_REVISION_VERSION 0
 
 #include "STAT_IncMRNet.h"
